fixed customer
