# models/Customer.js
@@ -1,4 +1,4 @@
-module.exports = (dbConnection, Sequelize) => {
+module.exports = (dbConnection, Sequelize, Ticket) => {
     const Customer = dbConnection.define("Customer", {
         id: {
             type: Sequelize.INTEGER,
@@ -12,7 +12,15 @@ module.exports = (dbConnection, Sequelize) => {
         email: {
             type: Sequelize.STRING,
             allowNull: false
-        }
+        },
+        TicketId: {
+            type: Sequelize.INTEGER,
+            allowNull: false,
+            references: {
+                model: Ticket,
+                key: "id"
+            }
+        },
     });
 
     return Customer;
